@@ -15,3 +15,6 @@ Fixed print mode hickup when pausing / resuming. Cleaned console temperature rep
 
 17 DEC 2023:
 Fixed M1 stop wait loop bug.
+
+05 JAN 2024:
+Fixed toolchange and dualmode override at end of file.
